Name:               mrf
Version:            0.0.0
Synopsis:           Markov random fields library.
Description:        Library for Markov random fields (undirected graphical models).
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.MRF.Base
                    Data.MRF.Generic
                    Data.MRF.FactorGraph
                    Data.MRF.ParamSet
                    Data.MRF.Inference
		    Data.MRF.Values
                    Data.MRF.Features
                    Data.MRF.Gradient
Other-modules:      Data.MRF.Generic.FactorGraph
                    Data.MRF.Generic.Feature
                    Data.MRF.Generic.ParamSet
                    Data.MRF.ParamSet.ParamMap
                    Data.MRF.ParamSet.ParamArray
                    Data.MRF.LogMath
                    Data.MRF.Util
                    Data.MRF.Vector.Binary
Build-Depends:      base
                  , primitive
                  , containers
                  , vector
                  , array
                  , ListLike
                  , listlike-instances
                  , random
		  , parallel
                  , binary
                  , sgd == 0.0.0
extensions:         ForeignFunctionInterface
                    MultiParamTypeClasses
                    FunctionalDependencies
                    FlexibleContexts
                    FlexibleInstances
                    UndecidableInstances
                    TypeSynonymInstances
